# webrender-wgpu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
example-compositor/compositor-wayland/: build.rs
example-compositor/compositor-windows/: build.rs
examples/: Cargo.toml  alpha_perf.rs  animation.rs  basic.rs  blob.rs  document.rs  iframe.rs  image_resize.rs  multiwindow.rs  scrolling.rs  texture_cache_stress.rs  wgpu_hal_device.rs  wgpu_headless.rs  wgpu_shared_device.rs  yuv.rs
examples/common/: boilerplate.rs  image_helper.rs
glsl-to-cxx/: Cargo.toml
glsl-to-cxx/src/: hir.rs  lib.rs
netrender/: Cargo.toml
netrender-notes/: 2026-03-01_webrender_wgpu_renderer_implementation_plan.md  2026-04-08_live_full_reftest_confirmation.md  2026-04-18_spirv_shader_pipeline_plan.md  2026-04-21_spirv_pipeline_reset_execution.md  2026-04-28_idiomatic_wgsl_pipeline_plan.md  2026-04-28_session_brief.md  2026-04-30_netrender_design_plan.md  2026-04-30_phase_d_rollback_to_skeleton.md  2026-04-30_servo_wgpu_integration_assessment.md  2026-05-01_vello_rasterizer_plan.md  2026-05-04_feature_roadmap.md  2026-05-05_compositor_handoff_path_b_prime.md  2026-05-05_deferred_phases.md  2026-05-06_webgl_over_wgpu_plan.md  PROGRESS.md  draw_context_plan.md  servo_wgpu_integration.md  texture_cache_cleanup_plan.md  typed_pipeline_metadata_plan.md  wasm-portability-checklist.md
netrender-notes/archive/: 2026-04-24_tile_with_spacing_validation_error.md  2026-04-28_renderer_body_wgpu_adapter_plan.md  2026-04-29_pipeline_first_migration_plan.md  2026-05-05_deferred_phases.md  README.md
netrender/examples/: demo_card_grid.rs
netrender/src/: batch.rs  compositor.rs  external_texture.rs  filter.rs  hit_test.rs  image_cache.rs  lib.rs  rasterizer.rs  registry.rs  render_graph.rs  scene.rs  space.rs  tile_cache.rs  vello_rasterizer.rs  vello_tile_rasterizer.rs
netrender/src/device/: mod.rs
netrender/src/device/wgpu/: adapter.rs  core.rs  format.rs  frame.rs  mod.rs  pass.rs  pipeline.rs  readback.rs  tests.rs  texture.rs
netrender/src/device/wgpu/shaders/: brush_solid.wgsl
netrender/src/renderer/: init.rs  mod.rs
netrender/tests/: compose_into.rs  op_list_painter_order.rs  oracle_blank.rs  p10a_text.rs  p10prime_a_glyph_api.rs  p10prime_b_glyph_render.rs  p11prime_a_strokes.rs  p11prime_b_paths.rs  p11prime_c_box_shadow.rs  p12b_nested_layers.rs  p12prime_a_scene_compositing.rs  p13prime_path_b_present_plumbing.rs  p1_solid_rect.rs  p1prime_oracle_regreen.rs  p1prime_vello_first_light.rs  p2_rect_scenes.rs  p2prime_vello_rects.rs  p3_transforms.rs  p4_batching.rs  p5_images.rs  p5prime_b_chromatic_tint.rs  p5prime_c_register_texture.rs  p5prime_vello_image.rs  p6_render_graph.rs  p7_tile_cache.rs  p7b_tile_render.rs  p7c_tile_composite.rs  p7prime_renderer_integration.rs  p7prime_vello_tile_cache.rs  p8a_linear_gradient.rs  p8b_radial_gradient.rs  p8c_conic_gradient.rs  p8prime_vello_gradients.rs  p9a_clip_rectangle.rs  p9b_box_shadow.rs  p9c_clip_fast_path.rs  p9prime_rounded_clip.rs  pa1_op_list_inspector.rs  pa2_scene_capture_replay.rs  pa3_tile_dirty_tracking.rs  (+11 more)
netrender/tests/common/: mod.rs
netrender/tests/oracle/: README.md
netrender_device/: Cargo.toml
netrender_device/src/: adapter.rs  binding.rs  buffer.rs  compositor.rs  core.rs  format.rs  frame.rs  lib.rs  pass.rs  pipeline.rs  readback.rs  shader.rs  tests.rs  texture.rs
netrender_device/src/shaders/: brush_blur.wgsl  brush_conic_gradient.wgsl  brush_image.wgsl  brush_linear_gradient.wgsl  brush_radial_gradient.wgsl  brush_rect_solid.wgsl  ps_text_run_dual_source.wgsl
netrender_text/: Cargo.toml
netrender_text/src/: lib.rs
netrender_text/tests/: pr6_inline_box_walker.rs  shape_and_paint.rs
notes/: 2026-04-30_p0_method_assignment.md  2026-04-30_wgpu_device_plan.md  2026-05-01_gl_coupled_types_survey.md
peek-poke/src/: lib.rs  vec_ext.rs
peek-poke/tests/: round_trip.rs
swgl/: Cargo.toml  build.rs
swgl/src/: swgl_fns.rs
webrender/: Cargo.toml  build.rs
webrender/res/: blend.glsl  brush.glsl  brush_image.glsl  brush_linear_gradient.glsl  brush_yuv_image.glsl  cs_clip_box_shadow.glsl  cs_linear_gradient.glsl  cs_radial_gradient.glsl  cs_svg_filter.glsl  cs_svg_filter_node.glsl  gpu_cache.glsl  image_source.glsl  prim_shared.glsl  ps_quad.glsl  ps_split_composite.glsl  ps_text_run.glsl
webrender/src/: api_resources.rs  batch.rs  border.rs  box_shadow.rs  bump_allocator.rs  capture.rs  clip.rs  command_buffer.rs  composite.rs  debugger.rs  ellipse.rs  filterdata.rs  frame_allocator.rs  frame_builder.rs  freelist.rs  glyph_cache.rs  gpu_cache.rs  gpu_types.rs  hit_test.rs  image_source.rs  image_tiling.rs  intern.rs  internal_types.rs  lib.rs  lru_cache.rs  pattern.rs  picture.rs  picture_composite_mode.rs  picture_graph.rs  picture_textures.rs  prepare.rs  print_tree.rs  profiler.rs  quad.rs  rectangle_occlusion.rs  render_api.rs  render_backend.rs  render_target.rs  render_task.rs  render_task_cache.rs  (+18 more)
webrender/tests/: angle_shader_validation.rs  wgpu_backends.rs  wgpu_buffer_smoke.rs  wgpu_end_to_end_smoke.rs  wgpu_external_texture_smoke.rs  wgpu_frame_smoke.rs  wgpu_pipeline_smoke.rs  (+4 more)
webrender_api/: Cargo.toml
webrender_build/: Cargo.toml
webrender_build/src/: lib.rs  shader.rs  shader_features.rs  spirv_reflect.rs  wgsl.rs
webrender_build/tests/: spirv_bindings_oracle.rs
wgpu-minimal-docs/: servo_wgpu_integration.md  shader_translation_journal.md  wgpu-backend-minimal-plan.md  wr_wgpu_diagnostics_archive.md
wr-wgpu-notes/: 2026-04-18_spirv_shader_pipeline_plan.md  2026-04-18_upstream_cherry_pick_plan.md  2026-04-22_upstream_cherry_pick_reevaluation.md  2026-04-26_track3_legacy_assembly_isolation_lane.md  2026-04-27_dual_servo_parity_plan.md  2026-04-28_idiomatic_wgsl_pipeline_plan.md  2026-04-28_renderer_body_wgpu_adapter_plan.md  2026-04-28_session_brief.md  2026-04-29_pipeline_first_migration_plan.md  PROGRESS.md  servo_wgpu_integration.md
wr_glyph_rasterizer/: Cargo.toml
wr_malloc_size_of/: lib.rs
wrench/: Cargo.toml  build.rs  compare_backends.sh
(+242 files in other folders)
