[workspace]
members = [
    "examples",
    "webrender",
    "webrender_api",
    "wrench",
    "example-compositor/compositor",
]
resolver = "2"

[workspace.package]
version = "0.68.0"

[workspace.dependencies]
api = { version = "0.68", path = "./webrender_api", package = "webrender_api" }
glsl-to-cxx = { version = "0.68", path = "./glsl-to-cxx", package = "glsl-to-cxx" }
glyph_rasterizer = { version = "0.68", path = "./wr_glyph_rasterizer", package = "wr_glyph_rasterizer" }
malloc_size_of = { version = "0.2.2", path = "./wr_malloc_size_of", package = "wr_malloc_size_of" }
peek-poke = { version = "0.3", path = "./peek-poke", package = "peek-poke" }
swgl = { version = "0.68", path = "./swgl", package = "swgl" }
webrender = { version = "0.68", path = "./webrender", package = "webrender" }
webrender_build = { version = "0.68", path = "./webrender_build", package = "webrender_build" }

gleam = "0.15.1"
glean = "=65.2.1"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

# optimizing glsl more makes a big difference in swgl build times
[profile.dev.package.glsl]
opt-level = 2

[profile.release.package.glsl]
opt-level = 2

[patch.crates-io]
firefox-on-glean = { path = "fog" }
# use a patched version of glutin that works on android
glutin = { version = "0.28", git = "https://github.com/jamienicol/glutin", branch="wr" }
wr_malloc_size_of = { path = "wr_malloc_size_of" }
