[package]
name = "webrender-examples"
version = "0.1.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
edition = "2018"

[[bin]]
name = "alpha_perf"
path = "alpha_perf.rs"

[[bin]]
name = "animation"
path = "animation.rs"

[[bin]]
name = "basic"
path = "basic.rs"

[[bin]]
name = "blob"
path = "blob.rs"

[[bin]]
name = "document"
path = "document.rs"

[[bin]]
name = "iframe"
path = "iframe.rs"

[[bin]]
name = "image_resize"
path = "image_resize.rs"

[[bin]]
name = "multiwindow"
path = "multiwindow.rs"

[[bin]]
name = "scrolling"
path = "scrolling.rs"

[[bin]]
name = "texture_cache_stress"
path = "texture_cache_stress.rs"

[[bin]]
name = "yuv"
path = "yuv.rs"

[[bin]]
name = "wgpu_headless"
path = "wgpu_headless.rs"

[[bin]]
name = "wgpu_shared_device"
path = "wgpu_shared_device.rs"

[[bin]]
name = "wgpu_hal_device"
path = "wgpu_hal_device.rs"

[features]
debug = ["webrender/capture", "webrender/profiler"]
wgpu_backend = ["webrender/wgpu_backend", "webrender/wgpu_native", "dep:pollster"]

[dependencies]
app_units = "0.7"
env_logger = { version = "0.10", default-features = false }
euclid = "0.22"
gleam = { workspace = true }
glutin = "0.28"
rayon = "1"
pollster = { version = "0.4", optional = true }
webrender = { path = "../webrender" }
winit = "0.26"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.7"
