[package]
name = "netrender"
version = "0.0.1"
license = "MPL-2.0"
description = "wgpu-native renderer shell (Phase 0.5 split per netrender-notes/2026-04-30_netrender_design_plan.md)"
edition = "2021"

[dependencies]
log = "0.4"
wgpu = { version = "29", default-features = false, features = ["std", "parking_lot", "dx12", "metal", "vulkan", "wgsl"] }
netrender_device = { path = "../netrender_device" }
vello = { git = "https://github.com/linebender/vello", branch = "main", version = "0.8.0", default-features = false, features = ["wgpu"] }

[dev-dependencies]
png = "0.17"
netrender_text = { path = "../netrender_text" }
