[package]
name = "netrender_device"
version = "0.0.1"
license = "MPL-2.0"
description = "wgpu-native device foundation for netrender (Phase 0.5 split per netrender-notes/2026-04-30_netrender_design_plan.md)"
edition = "2021"

[dependencies]
log = "0.4"
wgpu = { version = "29", default-features = false, features = ["std", "parking_lot", "dx12", "metal", "vulkan", "wgsl"] }
pollster = "0.4"
