[package]
name = "webrender_build"
authors = ["The Servo Project Developers"]
version.workspace = true
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
description = "Code shared between precompilation (build.rs) and the rest of WebRender"
edition = "2018"

[features]
serialize_program = ["serde"]
wgsl = ["dep:naga"]

[dependencies]
bitflags = "2"
lazy_static = "1"
serde = { optional = true, version = "1.0", features = ["serde_derive"] }
naga = { version = "26.0", features = ["glsl-in", "wgsl-out"], optional = true }
