[package]
name = "webrender_build"
authors = ["The Servo Project Developers"]
version = "0.0.2"
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
description = "Code shared between precompilation (build.rs) and the rest of WebRender"
edition = "2018"

[features]
serialize_program = ["serde"]
shader-gen = ["shaderc"]

[dependencies]
bitflags = "2"
lazy_static = "1"
shaderc = { version = "0.8", optional = true }
serde = { optional = true, version = "1.0", features = ["serde_derive"] }
